--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
+    "react-loading-indicators": "^1.0.1",
     "react-router": "^7.9.4",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
